# mlir-toy

./: CMakeLists.txt  build.sh
ex1-io/: ex1-io.cpp  ex1.mlir
ex2-generate-mlir/: ex2-generate-mlir.cpp
ex3-dialect/: CMakeLists.txt
ex3-dialect/include/Toy/: ToyOps.td
ex4-lib/: CMakeLists.txt
ex4-lib/lib/: toy.cpp
ex5-opt/: CMakeLists.txt
ex5-opt/include/Toy/: CMakeLists.txt  ToyBase.td  ToyOps.h  ToyOps.td
ex5-opt/lib/: toy.cpp
ex5-opt/tools/toy-opt/: CMakeLists.txt
ex6-op-extend/include/Toy/: ToyOps.td
ex6-op-extend/lib/: CMakeLists.txt  toy.cpp
ex6-op-extend/tools/toy-opt/: toy-opt.cpp
ex7-pass/: CMakeLists.txt  ex7.mlir
ex7-pass/include/Toy/: Passes.td  ToyDialect.h  ToyOps.h  ToyOps.td
ex7-pass/lib/: CMakeLists.txt  toy.cpp
ex7-pass/lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp  DCE.cpp
ex7-pass/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
ex8-pattern/: README.md  ex7.mlir
ex8-pattern/include/Toy/: CMakeLists.txt  Passes.h  Passes.td
ex8-pattern/lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp
ex8-pattern/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
manipulate-operation/: manipulate-operation.cpp
pass/: ctlz.mlir  mlir-opt-help.txt
